package seedu.address.model.diet;

public enum PlanType {
    WEIGHT_GAIN, WEIGHT_LOSS, WEIGHT_MAINTAIN;
}
